[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/playing.gd" type="Script" id=1]
[ext_resource path="res://assets/playing_background.png" type="Texture" id=2]
[ext_resource path="res://assets/LondrinaSolid-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/happy_intern.png" type="Texture" id=4]
[ext_resource path="res://scripts/play_area.gd" type="Script" id=6]
[ext_resource path="res://assets/angry_intern.png" type="Texture" id=7]
[ext_resource path="res://assets/lose_intern.png" type="Texture" id=8]
[ext_resource path="res://assets/lose_box.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_top = -4
extra_spacing_bottom = -3
extra_spacing_space = -1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("intern:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 220, 322 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("intern:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("text3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -22, 466 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("text3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "angry_float"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("intern:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 220, 320 ), Vector2( 220, 350 ), Vector2( 220, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("intern:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "happy_float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("intern:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 220, 320 ), Vector2( 220, 310 ), Vector2( 220, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("intern:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "not_enough_points"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("text3:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -22, 515 ), Vector2( -22, 465 ), Vector2( -22, 465 ), Vector2( -22, 515 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("text3:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 4.75683, 1, 0.170755, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 3 )

[node name="playing" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 959, 541 )
texture = ExtResource( 2 )

[node name="score_label" type="Label" parent="."]
margin_left = 231.0
margin_top = 125.0
margin_right = 429.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pontuação"
align = 1
valign = 1

[node name="score" type="Label" parent="."]
margin_left = 192.0
margin_top = 74.0
margin_right = 467.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99999999999"
align = 1
valign = 1

[node name="store_label" type="Label" parent="."]
margin_left = 192.0
margin_top = 392.0
margin_right = 466.0
margin_bottom = 450.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Peça guardada"
align = 1
valign = 1

[node name="store_label2" type="Label" parent="."]
margin_left = 84.0
margin_top = 522.0
margin_right = 665.0
margin_bottom = 1007.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "- Rodadas intercaladas entre você e o estagiário (3:1)
- Ganhe pontos para suspender o estágiário
- Enquanto estiverem juntos, os problemas nunca acabarão..."
valign = 1
autowrap = true

[node name="next_Label" type="Label" parent="."]
margin_left = 1445.0
margin_top = 230.0
margin_right = 1719.0
margin_bottom = 288.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Próxima peça"
align = 1
valign = 1

[node name="fire" type="Button" parent="."]
margin_left = 1360.0
margin_top = 342.0
margin_right = 1803.0
margin_bottom = 1027.0
hint_tooltip = "Clique para suspender o estagiário"
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="intern" type="Sprite" parent="fire"]
position = Vector2( 220, 322 )

[node name="text" type="Label" parent="fire"]
margin_left = 25.0
margin_top = 560.0
margin_right = 417.0
margin_bottom = 618.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Suspender estagiário"
align = 1
valign = 1

[node name="text2" type="Label" parent="fire"]
margin_left = 54.0
margin_top = 602.0
margin_right = 387.0
margin_bottom = 660.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "(3 rodadas, 3 pts)"
align = 1
valign = 1

[node name="text3" type="Label" parent="fire"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -22.0
margin_top = 466.0
margin_right = 460.0
margin_bottom = 524.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Você não tem pontos o suficiente... ruim!"
align = 1
valign = 1

[node name="animation" type="AnimationPlayer" parent="fire"]
anims/RESET = SubResource( 3 )
anims/angry_float = SubResource( 5 )
anims/happy_float = SubResource( 4 )
anims/not_enough_points = SubResource( 6 )

[node name="holding" type="Sprite" parent="."]
position = Vector2( 332, 324 )

[node name="next" type="Sprite" parent="."]
position = Vector2( 1581, 162 )

[node name="play_area" type="Node2D" parent="."]
position = Vector2( 690, 1 )
script = ExtResource( 6 )

[node name="lose" type="Node2D" parent="."]
visible = false

[node name="darkener" type="ColorRect" parent="lose"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.75 )

[node name="lose_box" type="Sprite" parent="lose"]
position = Vector2( 933, 594 )
texture = ExtResource( 9 )

[node name="lose_text" type="Label" parent="lose"]
margin_left = 598.0
margin_top = 523.0
margin_right = 1286.0
margin_bottom = 670.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Você é muito ruim nesse jogo...
Clique para reiniciar"
align = 1

[node name="lose_intern" type="Sprite" parent="lose"]
position = Vector2( 1581, 663 )
texture = ExtResource( 8 )

[node name="restart_button" type="Button" parent="lose"]
margin_right = 1920.0
margin_bottom = 1080.0
flat = true

[connection signal="pressed" from="fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="lose/restart_button" to="." method="_on_restart_button_pressed"]
